Fix border collapse in header

--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -14,9 +14,9 @@
     }
 }
 @media (max-width: 720px) {
-    header {
+    /* header {
         height: auto;
-    }
+    } */
     .header-container {
         display: block;
     }
@@ -27,8 +27,8 @@
     .logo {
         display: block;
         text-align: center;
-        padding: 15px 0;
-        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .menu {
         display: block;
